editor wrap layout fix

--- a/css/helpers.css
+++ b/css/helpers.css
@@ -18,13 +18,14 @@
 }
 
 .icon {
-    width: 40px;
-    height: 40px;
+    width: 35px;
+    height: 35px;
 }
 
 .sticker {
-    height: 45px;
+    height: 40px;
     cursor: pointer;
+    vertical-align: middle;
 }
 
 /* lists */
@@ -81,25 +82,6 @@
 
 .grid.justify-center {
     justify-content: center;
-}
-
-/* Range Slider */
-
-.image-slider {
-    -webkit-appearance: none;
-    outline: none;
-    height: 10px;
-    border-radius: 5px;
-    background: #d3d3d3;
-}
-
-.image-slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 45px;
-    height: 45px;
-    background-size: contain;
-    cursor: pointer;
 }
 
 .screener {
