--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ html {
 body {
     margin: 0;
     background-color: #22252c;
+    overflow-y: hidden;
 }
 
 input, button, select {
@@ -36,7 +37,7 @@ a {
     color: inherit;
 }
 
-button {
+button, select {
     cursor: pointer;
 }
 
@@ -197,7 +198,7 @@ header {
     border-radius: 7px;
     background-color: #22252c;
     padding-right: 15px;
-    /* margin-bottom: 10px; */
+    margin: 5px 0;
 }
 
 /* handle */
@@ -211,13 +212,13 @@ header {
 
 .meme-editor {
     flex-grow: 1;
-    padding: 15px;
+    overflow-y: auto;
 }
 
 .canvas-container {
     flex-basis: 50%;
-    height: 100%;
-    justify-content: center;
+    flex-grow: 1;
+    margin: 10px 0 0;
 }
 
 canvas {
@@ -227,18 +228,19 @@ canvas {
 
 .controllers-container {
     flex-basis: 50%;
-    padding: 10px;
+    flex-grow: 1;
+    padding: 10px 0 5px;
 }
 
 .controllers {
-    background-color: #383b42;
-    grid-gap: 17px;
+    column-gap: 17px;
+    row-gap: 22px;
     width: fit-content;
-    grid-template-areas: "add input input input input" "size size left center right" "font font font outline color" "stickers stickers stickers stickers stickers" "save save . download download" ". share share share .";
-    grid-template-columns: repeat(5, 60px);
-    grid-template-rows: repeat(5, 60px);
+    grid-template-areas: "add input input input input input" "size size size left center right" "font font font font outline color" "stickers stickers stickers stickers stickers stickers" "save save download download share share";
+    grid-template-columns: repeat(6, 55px);
+    grid-auto-rows: 55px;
     background-color: #383b42;
-    padding: 25px 40px;
+    padding: 25px;
     border-radius: 30px;
 }
 
@@ -281,6 +283,25 @@ canvas {
 
 .font-size-range::-webkit-slider-thumb {
     background: url(../assets/icons/font-size.svg);
+}
+
+/* Range Slider */
+
+.image-slider {
+    -webkit-appearance: none;
+    outline: none;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: #d3d3d3;
+}
+
+.image-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 45px;
+    height: 45px;
+    background-size: contain;
+    cursor: pointer;
 }
 
 select[name=text-font] option:nth-child(1) {
@@ -421,7 +442,6 @@ footer .copyrights {
     margin: 0 1em;
     text-align: center;
     white-space: nowrap;
-    overflow: hidden;
 }
 
 .footer-links a:hover {
